--- a/intergration_poc_yaml/petstore-poc.yaml
+++ b/intergration_poc_yaml/petstore-poc.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   description: |
-    This is a sample Petstore server.  You can find 
+    This is a sample Petstore server.  You can find edited in github
     out more about Swagger at 
     [http://swagger.io](http://swagger.io) or on 
     [irc.freenode.net, #swagger](http://swagger.io/irc/).
